--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,18 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_pack_tag 'application' %>
   </head>
 
   <body>
+  <%= render 'shared/flash_message' %>
+  <% if logged_in? %>
+  <%= render 'shared/header' %>
+<% else %>
+  <%= render 'shared/before_login_header' %>
+<% end %>
     <%= yield %>
+    <%= render 'shared/footer' %>
   </body>
 </html>
