--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -2,6 +2,7 @@
   <nav class="navbar navbar-expand-lg navigation navbar-light bg-light">
   
   <%= link_to image_tag('logo.png', :size => '120x150'), root_path, class: 'navbar-brand' %>
+  <%= link_to image_tag('logo2.png'), root_path, class: 'navbar-brand' %>
 
     
     <button class='navbar-toggler' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
@@ -11,7 +12,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto main-nav align-items-center">
          <li class="nav-item">
-         <%= link_to '新規登録へ', new_user_path %>
+         <%= link_to '新規登録へ', new_user_path, class: 'nav-link' %>
         <%= link_to 'ログイン', login_path, class: 'nav-link' %>
         </li>
       </ul>
