--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,5 +14,6 @@
  *= require_self
  */
 @import 'bootstrap';
+@import '~bootstrap/scss/bootstrap';
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
